@@ -53,6 +53,7 @@
  * 13-Dec-2006 : Added support for GradientPaint in legend items (DG);
  * 16-Mar-2007 : Updated border drawing for changes in AbstractBlock (DG);
  * 18-May-2007 : Pass seriesKey and dataset to legend item block (DG);
+ * 15-Aug-2008 : Added getWrapper() method (DG);
  *
  */
 
@@ -534,6 +535,17 @@ public class LegendTitle extends Title
         }
         target = trimPadding(target);
         return container.draw(g2, target, params);
+    }
+
+    /**
+     * Returns the wrapper container, if any.
+     *
+     * @return The wrapper container (possibly <code>null</code>).
+     *
+     * @since 1.0.11
+     */
+    public BlockContainer getWrapper() {
+    	return this.wrapper;
     }
 
     /**
